### Voltaire's Nightmare Changelog ###

# v 2.2.11 #

-Updated the mod to EU4 version 1.37
-Added partial principalities as new subject type for the Kievan Rus
-Updated many trade goods icons
-Minor history adjustments
-Other minor localization/bug fixes

# v 2.2.10 #

-Updated the mod to EU4 version 1.36
-Added the following new National Idea sets: Ruppin, Erzurum, Trieste, Tecklenburg & Aromanian group set
-Added seigneuries as new subject type for Jerusalem and the Latin Empire
-Added an event for the Safavid Invasion
-Added the following alternative country names: Osman (Ottomans), Chobanids (Azerbaijan), Maku (Azerbaijan), Buyids (Baghdad), Emirate of Baghdad (Jalair)
-Reworked the spawn events of Jerusalem and the Latin Empire so that they start with several seigneury subjects
-Reworked the following mission trees: Anjou, Ængland, Aquitaine, Alsace
-Reused several East Asian government reforms from Domination
-Added religious icons to Iconoclast religion, representing Aniconism
-Germanic Monarchies will now use the vanilla Elective Monarchy mechanic
-Anjou and Aquitaine can now form the Angevin Empire through their mission trees
-Reworked theh Collapse of the Khaganate, making it less easy to avoid and more punishing
-The Revolt of the Earls is no longer avoidable by changing primary culture
-Added soundeffects to crusade events
-If the Emperor wins the Investiture Controversy, the Emperor will become papal controller
-Nerfed invasion nations
-Removed 'Unify Russia' casus belli for the Kievan Rus
-Forming Russia will now destroy the Kievan Rus
-Reworked the Frankish Empire formation decision to match the vanilla Roman Empire formation decision
-Sweden now starts with a 'Christian Opposition' estate privilege which gets removed via event later
-Fixed Eunuch privileges not reducing autonomy
-Forming Ireland or Ruthenia will now keep the country color of the original tag
-Added Griko culture to south Italy