@@ -1216,6 +1216,7 @@ cb_chinese_unification = {
 
 
 	prerequisites_self = {
+		always = no
 		is_free_or_tributary_trigger = yes
 		OR = {
 			AND = {
