@@ -2403,11 +2403,11 @@ on_bi_yearly_pulse_5 = {
 		# 100 = flavor_jap.55
 
 		# China
-		75 = meritocracy_events.1
-		75 = meritocracy_events.2
-		75 = meritocracy_events.3
-		75 = meritocracy_events.4
-		75 = meritocracy_events.5
+		#75 = meritocracy_events.1
+		#75 = meritocracy_events.2
+		#75 = meritocracy_events.3
+		#75 = meritocracy_events.4
+		#75 = meritocracy_events.5
 		#50 = china_events.11
 		#25 = china_events.12
 		25 = china_events.24
