@@ -23,19 +23,20 @@ po_form_union_with_england = {
 	}
 	is_allowed = {
 		FROM = {
-			tag = ASE
+			OR = {
+				junior_union_with = ASE #if enforced against NRM or NOR
+				tag = ASE #if enforced against ASE itself
+			}
 		}
 	}
 	effect = {
-		create_union = FROM
+		ASE = { grant_independence = yes }
+		create_union = ASE
 	}
 	ai_weight = {
 		export_to_variable = {
 			variable_name = ai_value
 			value = 1000
-		}
-		limit = {
-			always = yes
 		}
 	}
 }
