@@ -1665,32 +1665,6 @@ christian = {
 					}
 				}
 			}
-
-			#VN
-			# icon_olga = {
-			# 	imperial_mandate = 0.025
-			# 	same_religion_advisor_cost = -0.2
-
-			# 	allow = {
-			# 		religion = orthodox
-			# 		has_country_flag = has_unlocked_icon_olga
-			# 	}
-			# 	visible = {
-			# 		religion = orthodox
-			# 		has_country_flag = has_unlocked_icon_olga
-			# 	}
-			# 	ai_will_do = {
-			# 		factor = 0.02
-			# 		modifier = {
-			# 			factor = 0
-			# 			is_emperor_of_china = no
-			# 		}
-			# 		modifier = {
-			# 			factor = 3
-			# 			NOT = { imperial_mandate = 30 }
-			# 		}
-			# 	}
-			# }
 		}
 	}
 
@@ -2015,6 +1989,7 @@ christian = {
 
 				allow = { religion = monothelite }
 				visible = { religion = monothelite }
+				
 				ai_will_do = {
 					factor = 1
 				}
