@@ -97,3 +97,17 @@ frankish_empire_decision_trigger = {
 	NOT = { region = brittany_region }
 	NOT = { region = lusatia_region }
 }
+
+participate_in_grand_crusade_trigger = {
+	custom_trigger_tooltip = {
+		tooltip = participate_in_grand_crusade_trigger_tt
+		OR = {
+			is_in_war = {
+				casus_belli = cb_grand_crusade
+			}
+			is_in_war = {
+				casus_belli = cb_grand_heretic
+			}
+		}
+	}
+}
