@@ -2003,7 +2003,7 @@ country_decisions = {
 		potential = {
 			always = no
 			has_dlc = "Mandate of Heaven"
-			has_global_flag = launched_oprichnina_flag
+			empire_of_china_reform_passed = vassalize_tributaries_decision
 			is_emperor_of_china = yes
 		}
 		allow = {
@@ -2012,7 +2012,7 @@ country_decisions = {
 			meritocracy = 100
 			imperial_mandate = 100
 			any_subject_country = {
-				is_subject_of_type = tributary_state
+				is_subject_of_type = partial_principality
 			}
 		}
 		effect = {
