@@ -298,6 +298,8 @@
  MESHCHERA_NAME_ADJ: "Meschtschorisch"
  ARAGVI_NAME: "Aragwi"
  ARAGVI_NAME_ADJ: "Aragwisch"
+ IQRITIYA_NAME: "Iqritiya"
+ IQRITIYA_NAME_ADJ: "Iqritiyan"
  AGHMAT: "Aghmat"
  AGHMAT_ADJ: "Aghmatisch"
  UZES: "Uzès"
