@@ -200,6 +200,9 @@
  eastern_monarchy_events.6.d: "It has come to our attention that some of [Root.Capital.GetCapitalName]'s many churches have hoarded vast stores of treasures that they do not need - gold candelabras, tabernacles, statues, silver plates, and similar artifacts. If we melt down these precious metals, it will greatly boost the royal coffers and minting programs, which have been sadly debased over the centuries from the glory days of the Solidus or Bezant."
  eastern_monarchy_events.6.a: "We need the money"
  eastern_monarchy_events.6.b: "Leave them be"
+ eastern_monarchy_events.7.t: "Feudalization of Byzantium"
+ eastern_monarchy_events.7.d: ""
+ eastern_monarchy_events.7.a: "Very nice"
 #Irish Clan
  irish_clan_events.1.t: "Tanistry Election"
  irish_clan_events.1.d: "Unlike feudal Europe, Ireland organizes its succession around the concept of Tanistry rather than primogeniture. An adult male relative who seems fit for the throne is nominated to succeed the current ruler - this can be his son, but such a relationship is not a necessity. Since our Clan is without an heir, it is now time to honor this ancient tradition and search through our relatives to find someone fit for our glorious throne."
@@ -2183,6 +2186,10 @@
  HREMD87: "The Great Seljuk [SJK.Monarch.GetTitle] [SJK.Monarch.GetName] has demanded that our [Root.Monarch.GetTitle] step down and allow a lowborn governor to take over rule of the Khwarezm region. Just as Khwarezm was once a tributary realm to the great Sassanid Persian state under its own local dynasty, should we again heed their demands and accept their proposed new leadership?"
  HREMA87: "Very well"
  HREMB87: "We bow to no one"
+ HREMT88: "The Bulgarian Uprising"
+ HREMD88: "The Bulgarians living in our realm have taken up arms against us! Their leaders claim that they are tired of bearing the extraordinary tax burden imposed by the [Root.GetAdjective] government. Inspired by the martyrdom of Saint Demetrius, even the local peasants are upholding this sudden rebellion. Apparently, God Himself is supporting the cause of the Bulgarians. To our horror, the two brothers leading the uprising have already been crowned Tsars.\nWe must crush this insidious revolt immediately, or we will witness the birth of a new Bulgarian Tsardom."
+ HREMA88: "We need another Bulgar Slayer!"
+ HREMB88: "Let them go"
  HREMT89: "Free City of Riga"
  HREMD89: "For generations, German traders and missionaries have visited the mouth of the Daugava river to carry out their business. Recently, their population has grown to such an extent that they have established a new fortified city on the site of the ancient village of Riga. In order to assist us in pushing German Catholic influence in the area, the Pope has proclaimed that the city will be immediately recognized as a Free City enjoying the full protection of Western European powers."
  HREMA89: "A pleasant development..."
@@ -2710,7 +2717,7 @@
  manzwon.tt: "There will be no further Turkish invasions."
  fbia115.tt: "Rimini will likely declare war on us."
  fbia117.tt: "§MMany provinces may appear as new Free Cities§!"
- inherit_appanages.tt: "Inherit any §YAppanages§!"
+ inherit_appanages.tt: "§TInherit any Partial Principalities"
  rota_disabled.tt: "Disables Rota Events"
  can_form_rus_rut.tt: "Unite the §YGrand Principality of the Rus§! to one country!"
  reform_em.tt: "§RAll owned provinces outside your Culture Group will break away.§!"
