@@ -200,6 +200,9 @@
  eastern_monarchy_events.6.d: "Wir sind darauf aufmerksam geworden, dass einige der vielen Kirchen von [Root.Capital.GetCapitalName] riesige Vorräte an Schätzen gehortet haben, die sie nicht brauchen - goldene Kronleuchter, Tabernakel, Statuen, Silberplatten und ähnliche Artefakte. Wenn wir diese kostbaren Metalle einschmelzen, wird das die königlichen Kassen und Prägeprogramme, die im Laufe der Jahrhunderte von den glorreichen Tagen des Solidus oder Bezant bedauerlicherweise entwürdigt wurden, stark aufwerten."
  eastern_monarchy_events.6.a: "Wir brauchen das Geld"
  eastern_monarchy_events.6.b: "Lasst es sein"
+ eastern_monarchy_events.7.t: "Feudalisierung von Byzanz"
+ eastern_monarchy_events.7.d: ""
+ eastern_monarchy_events.7.a: "Sehr schön"
 #Irish Clans
  irish_clan_events.1.t: "Thanwahl"
  irish_clan_events.1.d: "Im Gegensatz zum feudalen Europa organisiert Irland seine Nachfolge nach dem Konzept der Thanwahl und nicht nach der Primogenitur. Ein erwachsener männlicher Verwandter, der für den Thron geeignet erscheint, wird als Nachfolger des jetzigen Herrschers nominiert - das kann sein Sohn sein, ist aber keine Voraussetzung dafür. Da unser Clan keinen Erben hat, ist es jetzt an der Zeit, diese alte Tradition zu ehren und unsere Verwandten zu erforschen, um jemanden zu finden, der für unseren glorreichen Thron geeignet ist."
@@ -2182,6 +2185,10 @@
  HREMD87: "Der Großseldschuke [SJK.Monarch.GetTitle] [SJK.Monarch.GetName] hat gefordert, dass [Root.GetMunserunsere] [Root.Monarch.GetTitle] zurücktritt und einem niederen Statthalter erlaubt, die Herrschaft über die Region Choresmien zu überlassen. So wie Choresmien einst ein Nebenreich des großen persischen Sassanidenstaates unter seiner eigenen lokalen Dynastie war, so sollten wir wieder auf ihre Forderungen hören und ihre vorgeschlagene neue Führung akzeptieren, oder?"
  HREMA87: "Na schön"
  HREMB87: "Wir beugen uns niemandem"
+ HREMT88: "Der bulgarische Aufstand"
+ HREMD88: "Die in unserem Reich lebenden Bulgaren haben die Waffen gegen uns erhoben! Ihre Anführer behaupten, sie seien es leid, die außerordentliche Steuerlast zu tragen, die ihnen die [Root.GetAdjective]e Regierung auferlegt. Inspiriert durch das Martyrium des heiligen Demetrius, unterstützen sogar die örtlichen Bauern diese überraschende Rebellion. Offenbar unterstützt Gott selbst die Sache der Bulgaren. Zu unserem Entsetzen sind die beiden Brüder, die den Aufstand anführen, bereits zu Zaren gekrönt worden.\nWir müssen diesen heimtückischen Aufstand sofort niederschlagen, sonst werden wir Zeuge der Geburt eines neuen bulgarischen Zarenreiches."
+ HREMA88: "Wir brauchen einen neuen Bulgarentöter!"
+ HREMB88: "Lasst sie ziehen"
  HREMT89: "Freie Reichsstadt von Riga"
  HREMD89: "Seit Generationen besuchen deutsche Händler und Missionare die Mündung der Düna, um ihren Geschäften nachzugehen. In letzter Zeit ist ihre Bevölkerung so stark gewachsen, dass sie an der Stelle des alten Dorfes Riga eine neue befestigte Stadt gegründet haben. Um uns dabei zu helfen, den deutschen katholischen Einfluss in diesem Gebiet voranzutreiben, hat der Papst verkündet, dass die Stadt unverzüglich als Reichsstadt anerkannt wird, die den vollen Schutz der westeuropäischen Mächte genießt."
  HREMA89: "Eine erfreuliche Entwicklung..."
@@ -2709,7 +2716,7 @@
  manzwon.tt: "Es wird keine weiteren türkischen Invasionen geben."
  fbia115.tt: "Rimini wird uns wahrscheinlich den Krieg erklären."
  fbia117.tt: "§MViele Provinzen werden als neue Freie Reichsstädte erscheinen§!"
- inherit_appanages.tt: "Inherit any §YAppanages§!"
+ inherit_appanages.tt: "§TErbt alle Partialfürstentümer§!"
  rota_disabled.tt: "Deaktiviert Rota-Ereignisse"
  can_form_rus_rut.tt: "Vereinigt das §Großfürstentum der Rus§! zu einem Land!"
  reform_em.tt: "§RAlle Provinzen im Besitz außerhalb unserer Kulturgruppe werden wegbrechen.§!"
