@@ -65,9 +65,6 @@
  man_i7: "Standardized Blueprints"
  man_i7_desc: "Architecture on an ad-hoc basis is how we have operated since time immemorial, but now we should make an effort to use standardized plans for buildings and farms. It will be much less of a headache all around to construct fresh structures across the realm, allowing us to build at a fraction of the usual time."
 #Misc fixes
- irish_ideas: "Ireland Ideas"
- irish_ideas_start: "Ireland Traditions"
- irish_ideas_bonus: "Ireland Ambition"
  DMD_ideas: "Dortmunder Ideas"
  DMD_ideas_start: "Dortmunder Traditions"
  DMD_ideas_bonus: "Dortmunder Ambition"
@@ -159,7 +156,6 @@
  additional_colonists_desc: "The first step in fabricating claims is forging historical documents, ancient affidavits promising some land or other. By understanding philological disciplines, we can create more convincing frauds which even the most skeptical scholars will believe."
  quest_for_the_new_world_desc: "The new world is many things, most important of all, empty. Well no one important lives there at any rate. By letting people know of the boundless opportunities we have in the new world we will encourage more people to go forth and settle there."
  cat_fortifying_catalonia_desc: "Catalonia has many potential threats and enemies. The coasts have often come under attack by Barbary pirates and across the Pyrenees invasions have often been staged into the core of the Catalan region. We must do what we can to fortify our country to ensure the safety of our young state and to make the most of the local geography."
- berenberg_bank_desc: "The first merchant bank in existence, being experts in helping merchants to expand upon their trade and produce even more revenue. Having this prestigious bank in our city will certainly benefit the city itself."
 #Hashhashin
  hashshashin_ideas: "Hashashin Ideas"
  hashshashin_ideas_start: "Hashashin Traditions"
@@ -3365,9 +3361,9 @@
  ICN_idea_7: "Repopulation"
  ICN_idea_7_desc: "Connacht has been hit hard by the famines that have ravaged Ireland, killing many of our people. We must pursue policies that allow us to get our population back to what it once was."
 #Irish
- irishclan_ideas: "Irish Ideas"
- irishclan_ideas_start: "Irish Traditions"
- irishclan_ideas_bonus: "Irish Ambition"
+ irishclan_ideas: "Irish Clan Ideas"
+ irishclan_ideas_start: "Irish Clan Traditions"
+ irishclan_ideas_bonus: "Irish Clan Ambition"
  irishclan_idea_1: "Custodians of the Clan"
  irishclan_idea_1_desc: "Even after the English regranted clan-based titles as feudal titles and began to bestow the position 'custodian' in replacement, the largest of the Irish clans were treated as royalty while the others were merely chieftains. We must maintain strong diplomatic ties to ensure our position amongst the clans."
  irishclan_idea_2: "Ancient High Kings"
