@@ -29,6 +29,7 @@
  has_courthouse_building_trigger_tt: "Has a §YWatchman§!, §YCourthouse§! or a §YTown Hall§! building."
  has_medical_building_trigger_tt: "Has an §YApothecary§! or a §YHospice§! building."
  has_education_building_trigger_tt: "Has a §YCollege§! or a §YUniversity§! building."
+ participate_in_grand_crusade_trigger_tt: "Participate in a §YGrand Crusade§!."
 #Misc
  the_righteous_army: "The Monaspa"
  desc_the_righteous_army: "No enemy fool enough to attack us shall leave our land alive. The royal guard itself will defend our soil with all they got!"
