@@ -29,6 +29,7 @@
  has_courthouse_building_trigger_tt: "Hat einen §YNachtwächter§!, einen §YGerichtshof§! oder ein §YRathaus§!."
  has_medical_building_trigger_tt: "Hat eine §YApotheke§! oder ein §YHospiz§!."
  has_education_building_trigger_tt: "Hat eine §YHochschule§! oder eine §YUniversität§!."
+ participate_in_grand_crusade_trigger_tt: "Nimmt an einem §Ygroßen Kreuzzug§! teil."
 #Misc
  the_righteous_army: "Monaspa"
  desc_the_righteous_army: "Kein Feind, der dumm genug ist, uns anzugreifen, wird unser Land lebend verlassen. Die königliche Garde wird unseren Boden mit allem verteidigen, was sie hat!"
@@ -52,6 +53,8 @@
  pax_americana: "Lokaler Frieden"
  nahuatl_sacrificial_stones: "Missionierung der Ætsægdin-Heiden"
  great_inti_festivals: "Missionierung der Khabze-Heiden"
+ sistine_chapel_tt:0 "§YDie Sixtinische Kapelle§! wird zu §Y[2708.GetName]§! hinzugefügt, was folgende Auswirkungen hat:\nHingabe (Jährlich): §G+0.10§!"
+ pap_sistinechapel_botticelli_tt:0 "§YDie Sixtinische Kapelle, dekoriert von Botticelli,§! wird zu §Y[2708.GetName]§! hinzugefügt, was folgende Auswirkungen hat:\nHingabe (Jährlich): §G+0.10§!\nUnruhe (Global): §G-1§!"
  pap_sistinechapel_botticelli_tt: "§YDie Sixtinische Kapelle, dekoriert von Botticelli,§! wird zu §Y[2708.GetName]§! hinzugefügt, was folgende Auswirkungen hat:\nHingabe (Jährlich): §G+0.10§!\nUnruhe (Global): §G-1§!"
  pap_sistinechapel_ghirlandaio_tt: "§YDie Sixtinische Kapelle, dekoriert von Ghirlandaio,§! wird zu §Y[2708.GetName]§! hinzugefügt, was folgende Auswirkungen hat:\nHingabe (Jährlich): §G+0.10§!\nPrestige (Jährlich): §G0.5§!"
  pap_sistinechapel_perugino_tt: "§YDie Sixtinische Kapelle, dekoriert von Perugino,§! wird zu §Y[2708.GetName]§! hinzugefügt, was folgende Auswirkungen hat:\nHingabe (Jährlich): §G+0.10§!\nBeziehungen verbessern: §G+10%§!"
