@@ -3,6 +3,7 @@ kievan_rus_ambitions = {
 	generic = yes
 	ai = yes
 	potential = {
+		always = no
 		OR = {
 			has_reform = principality
 			has_reform = tsardom
