@@ -4,6 +4,7 @@
 
 -Updated the mod to EU4 version 1.37
 -Added partial principalities as new subject type for the Kievan Rus
+-Added an event for the establishment of the Second Bulgarian Empire
 -Updated many trade goods icons
 -Minor history adjustments
 -Other minor localization/bug fixes
